plugins
{
	id 'com.android.application'
}

android
{
	compileSdk 37
	defaultConfig
	{
		applicationId = 'com.odiousapps.weewxweather'
		minSdk = 24
		targetSdk = 37
		versionName = '1.99.138beta'
		versionCode = 1099138
	}

	buildFeatures
	{
		buildConfig = true
	}

	buildTypes
	{
		release
		{
			minifyEnabled = true
			shrinkResources = true
			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
		}

		debug
		{
			minifyEnabled = false
		}
	}

	compileOptions
	{
		sourceCompatibility JavaVersion.VERSION_21
		targetCompatibility JavaVersion.VERSION_21
		coreLibraryDesugaringEnabled = true
	}

	tasks.withType(JavaCompile).configureEach
	{
		options.compilerArgs += ['-Xlint:deprecation']
	}

	namespace = 'com.odiousapps.weewxweather'
}

androidComponents
{
	onVariants(selector().withBuildType('release'))
	{
		final variant -> variant.outputs.forEach
		{
			final output ->
				final def appName = 'weeWXApp'
				final def versionName = variant.outputs.first().versionName.get()
				output.outputFileName.set("${appName}-${versionName}.apk")
		}
	}
}

dependencies
{
	coreLibraryDesugaring('com.android.tools:desugar_jdk_libs:2.1.5')

	implementation fileTree(dir: 'libs', include: ['*.jar'])

	implementation('com.google.android.material:material:1.13.0')
	implementation('androidx.core:core:1.18.0')
	implementation('androidx.fragment:fragment:1.8.9')
	implementation('androidx.swiperefreshlayout:swiperefreshlayout:1.2.0')
	implementation('androidx.webkit:webkit:1.15.0')

	implementation('com.google.code.gson:gson:2.13.2')

	implementation('com.caverock:androidsvg:1.4')

	implementation('com.squareup.okhttp3:okhttp:5.3.2')
	//implementation("org.nanohttpd:nanohttpd:2.3.1")

	implementation('dnsjava:dnsjava:3.6.4')
	implementation('org.slf4j:slf4j-api:2.0.17')
	implementation('uk.uuid.slf4j:slf4j-android:2.0.17-0')

	implementation('org.jsoup:jsoup:1.22.2')

	// The following line suppresses version warnings when using commit IDs for the version...
	//noinspection GradleDependency
	//implementation files("library-release.aar")
	implementation('com.github.evilbunny2008:ColourPicker:2.0.24')

	implementation('com.github.evilbunny2008:XmlToJson:2.0.2')
}